Multi env and workflow components part1-fix18

--- a/.github/workflows/deploy-vnet.yml
+++ b/.github/workflows/deploy-vnet.yml
@@ -32,7 +32,7 @@ on:
       createLinuxServer1:
         required: true
         type: boolean
-      createWindowsDesktop:
+      createWindowsDesktop1:
         required: true
         type: boolean
       adminDBLoginName:
