--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -63,7 +63,7 @@ jobs:
         frontendSubnetStartIp: ${{needs.deploy-vnet-test.outputs.frontendSubnetStartIp }}
         frontendSubnetEndIp: ${{ needs.deploy-vnet-test.outputs.frontendSubnetEndIp }}
         frontendSubnetId: ${{ needs.deploy-vnet-test.outputs.frontendSubnetId }}
-        backendSubnetId: ${{ needs.deploy-vnet-test.outputs.backendSubnetId }}
+        backendSubnetId: ${{ fromJSON(needs.deploy-vnet-test.outputs.backendSubnetId) }}
         vnetId: ${{ needs.deploy-vnet-test.outputs.vnetId }}
         createWindowsServer1: true
         createLinuxServer1: true
