Multi env and workflow components part1-fix18

--- a/.github/workflows/deploy-vnet.yml
+++ b/.github/workflows/deploy-vnet.yml
@@ -14,7 +14,7 @@ on:
       vnetId:
         value: ${{ jobs.deploy-vnet.outputs.vnetId }}  
       vnetName:      
-        value: ${{ jobs.deploy-vnet.outputs.vnetName }}   }}      
+        value: ${{ jobs.deploy-vnet.outputs.vnetName }}        
     inputs:
       resourceGroupName:
         required: true
