--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -71,6 +71,6 @@ jobs:
           AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID_TEST }}
           AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
           AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          # adminDBPassword: ${{ secrets.ADMINDBPASSWORD }}
-          # vmWindowsLoginPassword: ${{ secrets.VMWINDOWSLOGINPASSWORD }}
-          # vmLinuxLoginPassword: ${{ secrets.VMLINUXLOGINPASSWORD }}
+          adminDBPassword: ${{ secrets.ADMINDBPASSWORD }}
+          vmWindowsLoginPassword: ${{ secrets.VMWINDOWSLOGINPASSWORD }}
+          vmLinuxLoginPassword: ${{ secrets.VMLINUXLOGINPASSWORD }}
