--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -26,7 +26,7 @@ jobs:
     #   needs: [build, lint]
       with:
         environmentType: Test
-        resourceGroupName: AzureSQLPrivateVN
+        resourceGroupName: AzureSQLPrivateVN-test
         appName: cosmo
         createGateway: no                 
       secrets:
