Added linting and validation to Vnet creation.

--- a/.github/workflows/deploy-vnet.yml
+++ b/.github/workflows/deploy-vnet.yml
@@ -26,48 +26,53 @@ on:
       AZURE_SUBSCRIPTION_ID:
         required: true
       
-jobs:
+jobs:  
   
-  # validate-vnet:
-  #   environment: ${{ inputs.environmentType }}
-  #   runs-on: ubuntu-latest  
-  #   steps:
-  #   - uses: actions/checkout@v3
-  #   - uses: azure/login@v1
-  #     id: validate-vnet
-  #     name: Sign in to Azure
-  #     with:
-  #       client-id: ${{ secrets.AZURE_CLIENT_ID }}
-  #       tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-  #       subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-  #   - if: inputs.environmentType != 'Production'
-  #     uses: azure/arm-deploy@v1
-  #     name: Run preflight validation
-  #     with:
-  #       deploymentName: ${{ github.run_number }}
-  #       resourceGroupName: ${{ inputs.resourceGroupName }}
-  #       template: ./deploy/modules/create_vnet_and_vpn.bicep
-  #       parameters: >           
-  #         appName=${{ inputs.appName }}
-  #         createGateway=${{ inputs.createGateway }}
-  #        #  vnetAddressPrefixes=${{ inputs.vnetAddressPrefixes }}
-  #        #  subnet1AddressPrefixes=${{ inputs.subnet1AddressPrefixes }}
-  #        #  subnet2AddressPrefixes=${{ inputs.subnet2AddressPrefixes }}
-  #        #  subnet3AddressPrefixes=${{ inputs.subnet3AddressPrefixes }}
-  #        #  vpnClientAddressPrefix=${{ inputs.vpnClientAddressPrefix }}
-  #       deploymentMode: Validate
-
-  deploy-vnet:     
+  validate:     
       # environment: ${{ inputs.environmentType }}
       # needs: validate-vnet
+      runs-on: ubuntu-latest      
+      steps:
+      - uses: actions/checkout@v3
+      - uses: azure/login@v1       
+        name: Sign in to Azure
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}     
+      - if: inputs.environmentType != 'Production'
+        uses: azure/arm-deploy@v1
+        name: Run preflight validation       
+        with:         
+          deploymentName: ${{ github.run_number }}
+          resourceGroupName: ${{ inputs.resourceGroupName }}
+          template: ./deploy/modules/create_vnet_and_vpn.bicep
+          parameters: >           
+            appName=${{ inputs.appName }}
+            createGateway=${{ inputs.createGateway }}
+          deploymentMode: Validate
+      - if: inputs.environmentType != 'Production'
+        uses: azure/arm-deploy@v1
+        name: Run what-if       
+        with:          
+          deploymentName: ${{ github.run_number }}
+          resourceGroupName: ${{ inputs.resourceGroupName }}
+          template: ./deploy/modules/create_vnet_and_vpn.bicep
+          parameters: >           
+            appName=${{ inputs.appName }}
+            createGateway=${{ inputs.createGateway }}
+          additionalArguments: --what-if   
+
+  deploy-vnet:     
+      environment: ${{ inputs.environmentType }}
+      needs: validate
       runs-on: ubuntu-latest
       outputs:       
         
         vnetName: ${{steps.deploy-vnet.outputs.vnetName}}
       steps:
       - uses: actions/checkout@v3
-      - uses: azure/login@v1
-        # id: deploy-vnet
+      - uses: azure/login@v1       
         name: Sign in to Azure
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
@@ -82,7 +87,7 @@ jobs:
       #       echo "Azure resource group created"
       - if: inputs.environmentType != 'Production'
         uses: azure/arm-deploy@v1
-        name: Run preflight validation
+        name: deploy
         id: deploy-vnet
         with:
           failOnStdErr: false
