--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,5 +1,5 @@
-name: deploy-toy-website-end-to-end
-concurrency: toy-company
+name: Azure-SQL_Private_VN_end_to_end
+concurrency: Azure-SQL_Private_VN
 
 on:
   push:
@@ -14,16 +14,16 @@ permissions:
 jobs:
 
   # Build the application and database.
-#   build:
-#     uses: ./.github/workflows/build.yml
+  build:
+    uses: ./.github/workflows/build.yml
 
-#   # Lint the Bicep file.
-#   lint:
-#     uses: ./.github/workflows/lint.yml
+  # Lint the Bicep file.
+  lint:
+    uses: ./.github/workflows/lint.yml
 
   deploy-vnet-test:            
       uses: ./.github/workflows/deploy-vnet.yml
-    #   needs: [build, lint]
+      needs: [build, lint]
       with:
         environmentType: Test
         resourceGroupName: AzureSQLPrivateVN-test
@@ -34,32 +34,32 @@ jobs:
           AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
           AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-  # job2:
-  #    runs-on: ubuntu-latest
-  #    needs: deploy-vnet-test
-  #    steps:      
-  #      - run: echo ${{ needs.deploy-vnet-test.outputs.vnetName}}
+  job2:
+     runs-on: ubuntu-latest
+     needs: deploy-vnet-test
+     steps:      
+       - run: echo ${{ needs.deploy-vnet-test.outputs.vnetName}}
     
-  # deploy-infra-test:      
-  #     uses: ./.github/workflows/deploy-infra.yml 
-  #     needs: [deploy-vnet-test]
-  #     with:
-  #       environmentType: Test
-  #       resourceGroupName: AzureSQLPrivateVNTest
-  #       appName: cosmo       
-  #       vnetName: ${{ needs.deploy-vnet-test.outputs.vnetName }}
-  #       createWindowsServer1: true
-  #       createLinuxServer1: true
-  #       createWindowsDesktop1: true
-  #       adminDBLoginName: gary
-  #       databaseName: slaesfloor
-  #       vmSize: 'Standard_B1ls'  
-  #       vmWindowsLoginUser: gary
-  #       vmLinuxLoginUser: gary                  
-  #     secrets:
-  #         AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID_TEST }}
-  #         AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-  #         AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-  #         adminDBPassword: ${{ secrets.ADMINDBPASSWORD }}
-  #         vmWindowsLoginPassword: ${{ secrets.VMWINDOWSLOGINPASSWORD }}
-  #         vmLinuxLoginPassword: ${{ secrets.VMLINUXLOGINPASSWORD }}
+  deploy-infra-test:      
+      uses: ./.github/workflows/deploy-infra.yml 
+      needs: [deploy-vnet-test]
+      with:
+        environmentType: Test
+        resourceGroupName: AzureSQLPrivateVNTest
+        appName: cosmo       
+        vnetName: ${{ needs.deploy-vnet-test.outputs.vnetName }}
+        createWindowsServer1: true
+        createLinuxServer1: true
+        createWindowsDesktop1: true
+        adminDBLoginName: gary
+        databaseName: slaesfloor
+        vmSize: 'Standard_B1ls'  
+        vmWindowsLoginUser: gary
+        vmLinuxLoginUser: gary                  
+      secrets:
+          AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID_TEST }}
+          AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+          AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          adminDBPassword: ${{ secrets.ADMINDBPASSWORD }}
+          vmWindowsLoginPassword: ${{ secrets.VMWINDOWSLOGINPASSWORD }}
+          vmLinuxLoginPassword: ${{ secrets.VMLINUXLOGINPASSWORD }}
