--- a/.github/workflows/deploy-infra.yml
+++ b/.github/workflows/deploy-infra.yml
@@ -75,8 +75,8 @@ jobs:
          client-id: ${{ secrets.AZURE_CLIENT_ID }}
          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}     
-     - if: inputs.environmentType != 'Production'
-       uses: azure/arm-deploy@v1
+    #  - if: inputs.environmentType != 'Production'
+     - uses: azure/arm-deploy@v1
        name: Deploy Infra
        id: deploy-infra
        with:
