--- a/.github/workflows/deploy-vnet.yml
+++ b/.github/workflows/deploy-vnet.yml
@@ -84,9 +84,8 @@ jobs:
       #       #!/bin/bash
       #       chmod +rx ./creat_pre_req.sh
       #       ./creat_pre_req.sh Azure-SQL_Private_VN AzureSQLPrivateVN test 'gary-RR' 'Azure-SQL_Private_VN'
-      #       echo "Azure resource group created"
-      - if: inputs.environmentType == 'Production'
-        uses: azure/arm-deploy@v1
+      #       echo "Azure resource group created"      
+      - uses: azure/arm-deploy@v1
         name: deploy
         id: deploy-vnet
         with:
